Fixed Visual bugs on small devices

--- a/public/Sass/Chat.scss
+++ b/public/Sass/Chat.scss
@@ -75,7 +75,7 @@ color: #566270;
 *******************/
 
 .Modal {
- position: absolute;
+ position: fixed;
  top: 0;
  left: 0;
  right: 0;
@@ -122,19 +122,32 @@ color: #566270;
 }
 
 /*******************
+       Alpha
+*******************/
+
+.Alpha {
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ max-width: 100vw;
+ height: 100vh;
+}
+
+/*******************
      Chat Body
 *******************/
 
 .Chat-Replies {
  max-width: 100%;
- height: 86vh;
+ height: 80vh;
  overflow: auto;
+ flex-basis: 80%;
+ flex-grow: 2;
 
  .Container {
-  width: 80%;
+  width: 90%;
   height: 100%;
-  margin: 0 auto; 
-  margin-top: 1em;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
 
@@ -183,7 +196,7 @@ color: #566270;
   }
   
   .Msg-Reciever {
-   display: inline-block;
+   display: block;
    color: #FFF;
    text-align: right;
    background-color: #A593E0;
@@ -197,16 +210,13 @@ color: #566270;
 } 
 
 /*******************
-      Footer
+      Input
 *******************/
 
-footer {
+.Input {
  max-width: 100%;
  height: 12vh;
- position: fixed;
- bottom: 0;
- left: 0;
- right: 0;
+ margin-top: auto;
  display: flex;
  justify-content: center;
  align-items: center;
@@ -255,7 +265,7 @@ footer {
  }
 }
 
-footer {
+.Input {
  height: 10vh;
 
  .Send-Btn {
@@ -290,7 +300,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -313,7 +323,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -336,7 +346,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -359,7 +369,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -382,7 +392,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -405,7 +415,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
@@ -428,7 +438,7 @@ footer {
   }
  }
 
-footer {
+.Input {
  height: 10vh;
 }
 }
